Remove fixed sizing for flexible print layout

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Chore Chart Generator (12×18 print)</title>
+  <title>Chore Chart Generator</title>
   <link rel="stylesheet" href="styles/chore-chart.css">
 </head>
 <body>
